# minesweeper

./: .gitignore  CMakeLists.txt  compile.sh  run.sh
include/minesweeper/: Board.hpp  Cell.hpp  Minesweeper.hpp
lib/: Board.cpp  CMakeLists.txt  Cell.cpp  Minesweeper.cpp
src/: CMakeLists.txt  Main.cpp
tests/: CMakeLists.txt  tests.cpp
